solved exercises in Foundations Course → Flexbox → Alignment

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,8 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  gap: 32pt;
 }
 
 img {
@@ -10,6 +13,24 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  align-self: center;
+}
+
+.gallery {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.gallery-item {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text {
+  text-align: center;
 }
 
 /* do not edit this footer */
